tests/error/misc_errors/panic_tag_not_static.err
Error: Expected a string literal (at $FILE:7:10)
  | 
5 | @compile_guppy
6 | def foo(y: bool) -> None:
7 |     panic("foo" if y else "bar", y)
  |           ^^^^^^^^^^^^^^^^^^^^^ Expected a string literal

Guppy compilation failed due to 1 previous error
